--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Discord bot",
   "version": "0.1.0",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.0.1",
     "simple-youtube-api": "^5.1.1",
     "ytdl-core-discord": "^1.2.1"
