--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "djzone",
   "description": "Discord bot",
   "version": "0.1.0",
+  "main": "index.js",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.0.1",
